[gd_scene load_steps=10 format=3 uid="uid://5ln5jieeyw4b"]

[ext_resource type="Script" uid="uid://bj1d6mvillccq" path="res://Scripts/UI/gameUI.gd" id="1_vo2tu"]
[ext_resource type="Script" uid="uid://cign7xud1xsnv" path="res://Scripts/UI/versionNumber.gd" id="2_5b8pf"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vo2tu"]
bg_color = Color(0.00784314, 0.286275, 0.309804, 1)
corner_radius_top_left = 100
corner_radius_bottom_right = 100

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_plf53"]
bg_color = Color(0.00784314, 0.286275, 0.309804, 1)
corner_radius_top_left = 100
corner_radius_bottom_right = 100

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vo2tu"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5b8pf"]
bg_color = Color(0.27451, 0.27451, 0.27451, 0.784314)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6w80a"]
bg_color = Color(0.827451, 0.819608, 0.384314, 0.768627)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lolt2"]
bg_color = Color(0.522705, 1, 0.46875, 0.768627)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tig4k"]
bg_color = Color(0.27451, 0.776471, 0.858824, 0.768627)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[node name="GameUi" type="CanvasLayer"]
script = ExtResource("1_vo2tu")
mMainMenuScene = "uid://cgsrj1drhnafo"

[node name="MainScreen" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Sign" type="Panel" parent="MainScreen"]
layout_mode = 0
offset_left = 50.0
offset_top = 930.0
offset_right = 350.0
offset_bottom = 980.0
theme_override_styles/panel = SubResource("StyleBoxFlat_vo2tu")

[node name="Station_Label" type="Label" parent="MainScreen/Sign"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -106.0
offset_top = -21.0
offset_right = 106.0
offset_bottom = 21.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "Station Name"
horizontal_alignment = 1
script = ExtResource("2_5b8pf")

[node name="Sign2" type="Panel" parent="MainScreen"]
layout_mode = 0
offset_left = 400.0
offset_top = 930.0
offset_right = 800.0
offset_bottom = 980.0
theme_override_styles/panel = SubResource("StyleBoxFlat_plf53")

[node name="Happniess_Level" type="Label" parent="MainScreen/Sign2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -106.0
offset_top = -21.0
offset_right = 106.0
offset_bottom = 21.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "Happiness Level"
horizontal_alignment = 1
script = ExtResource("2_5b8pf")

[node name="Sign3" type="Panel" parent="MainScreen"]
layout_mode = 0
offset_left = 400.0
offset_top = 1000.0
offset_right = 800.0
offset_bottom = 1050.0
theme_override_styles/panel = SubResource("StyleBoxFlat_plf53")

[node name="Time_Left" type="Label" parent="MainScreen/Sign3"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -106.0
offset_top = -21.0
offset_right = 106.0
offset_bottom = 21.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "Time Remaining: "
horizontal_alignment = 1

[node name="NextStationButton" type="Button" parent="MainScreen"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = -90.0
offset_right = 350.0
offset_bottom = -17.0
grow_vertical = 0
theme_override_colors/font_hover_color = Color(1, 0.968627, 1, 1)
theme_override_colors/font_color = Color(1, 0.964706, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 0.972549, 1)
theme_override_colors/font_pressed_color = Color(1, 0.964706, 1, 1)
theme_override_font_sizes/font_size = 35
theme_override_styles/focus = SubResource("StyleBoxEmpty_vo2tu")
theme_override_styles/disabled = SubResource("StyleBoxFlat_5b8pf")
theme_override_styles/hover = SubResource("StyleBoxFlat_6w80a")
theme_override_styles/pressed = SubResource("StyleBoxFlat_lolt2")
theme_override_styles/normal = SubResource("StyleBoxFlat_tig4k")
text = "Next Station"

[node name="GameOverPanel" type="ColorRect" parent="MainScreen"]
visible = false
layout_mode = 0
offset_left = 660.0
offset_top = 240.0
offset_right = 1260.0
offset_bottom = 840.0
color = Color(0.00784314, 0.286275, 0.309804, 1)

[node name="GameOverText" type="Label" parent="MainScreen/GameOverPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -293.0
offset_right = 300.0
offset_bottom = -183.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 80
text = "Game Over"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Happniess_Level" type="Label" parent="MainScreen/GameOverPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -180.0
offset_right = 300.0
offset_bottom = -125.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 35
text = "Happiness Level: 1234"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StationCount_Label" type="Label" parent="MainScreen/GameOverPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -135.0
offset_right = 300.0
offset_bottom = -80.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 35
text = "Stations Travelled: 20"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Score_Label" type="Label" parent="MainScreen/GameOverPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -69.0
offset_right = 300.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 50
text = "Score: 12345"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayAgain" type="Button" parent="MainScreen/GameOverPanel"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 147.0
offset_top = -266.0
offset_right = 447.0
offset_bottom = -193.0
grow_vertical = 0
theme_override_colors/font_hover_color = Color(1, 0.968627, 1, 1)
theme_override_colors/font_color = Color(1, 0.964706, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 0.972549, 1)
theme_override_colors/font_pressed_color = Color(1, 0.964706, 1, 1)
theme_override_font_sizes/font_size = 35
theme_override_styles/focus = SubResource("StyleBoxEmpty_vo2tu")
theme_override_styles/disabled = SubResource("StyleBoxFlat_5b8pf")
theme_override_styles/hover = SubResource("StyleBoxFlat_6w80a")
theme_override_styles/pressed = SubResource("StyleBoxFlat_lolt2")
theme_override_styles/normal = SubResource("StyleBoxFlat_tig4k")
text = "Play Again"

[node name="MainMenu" type="Button" parent="MainScreen/GameOverPanel"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 147.0
offset_top = -158.0
offset_right = 447.0
offset_bottom = -85.0
grow_vertical = 0
theme_override_colors/font_hover_color = Color(1, 0.968627, 1, 1)
theme_override_colors/font_color = Color(1, 0.964706, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 0.972549, 1)
theme_override_colors/font_pressed_color = Color(1, 0.964706, 1, 1)
theme_override_font_sizes/font_size = 35
theme_override_styles/focus = SubResource("StyleBoxEmpty_vo2tu")
theme_override_styles/disabled = SubResource("StyleBoxFlat_5b8pf")
theme_override_styles/hover = SubResource("StyleBoxFlat_6w80a")
theme_override_styles/pressed = SubResource("StyleBoxFlat_lolt2")
theme_override_styles/normal = SubResource("StyleBoxFlat_tig4k")
text = "Main Menu"

[connection signal="pressed" from="MainScreen/NextStationButton" to="." method="next_station"]
[connection signal="pressed" from="MainScreen/GameOverPanel/PlayAgain" to="." method="OnPlayAgainButtonPressed"]
[connection signal="pressed" from="MainScreen/GameOverPanel/MainMenu" to="." method="OnMainMenuButtonPressed"]
